# solana-multisig

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
client/: library.ts  loader.ts  main.ts  multisig.ts  schema.ts  tokens.ts
client/util/: new-account-with-lamports.ts
examples/: close.sh  create_token.sh  setup.sh  transfer.sh  upgrade-other.sh  upgrade-self.sh
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  tests.rs  utils.rs
